@@ -6,7 +6,7 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'rubocop'
 gem 'ruby-lsp', '~> 0.0.4', group: :development
+
 # gem 'pry'
 gem 'pry', group: :development
-# gem 'require_all' # yup I'm lazy: https://stackoverflow.com/questions/735073/best-way-to-require-all-files-from-a-directory-in-ruby
 # gem 'after_do' # To allow AFTER calling instance to do LOAD() automagically. Naah I can do without :)
